# C_SimpleSocket

./: .gitignore  README.md  multicast_sender.c
BasicCode/: SimpleClient  SimpleClient.c  SimpleServer  SimpleServer.c  SocketClient.c
BasicCode_TCP/: CMakeLists.txt  SimpleClient.c
